# doc-intelligence-system-docker

./: .env.example  .gitignore  1  CLAUDE.md  LICENSE  deepseekapikey.md  docker-compose.yml  openapi.json  pytest.ini  tasks_backup.sql  validate_config.py  问题信息.md
backend/: .env.backend.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  start_app.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  documents.py  download.py  tasks.py  templates.py
backend/app/core/: celery_app.py  tasks.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py  task_repository.py  template_repository.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  document_parser.py  llm_service.py  table_generator.py  task_service.py
backend/app/tests/: __init__.py  conftest.py  test_api.py  test_document_parser.py  test_llm_service.py  test_models.py  test_table_generator.py  test_task_service.py
backend/app/utils/: __init__.py  file_utils.py  validators.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py  runxlrd.py
